--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "hbs": "~3.1.0",
     "morgan": "~1.6.1",
     "reflect-metadata": "^0.1.3",
+    "angular2-websocket": "^0.9.6",
     "rxjs": "^5.5.0",
     "serve-favicon": "~2.3.0",
     "ws": "^4.0.0",
